syntax = "proto3";

package recommendation;

service RecommendationService {
  rpc GetRecommendations (RecommendationRequest) returns (RecommendationResponse);
}

message RecommendationRequest {
  string userId = 1;
}

message RecommendationResponse {
  repeated string products = 1;
}
